Add sub menu to store links

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -3396,7 +3396,9 @@ I try to do a lot of things with =org-roam= :
 #+begin_src emacs-lisp
 (transient-define-prefix nc/transient-org()
   "Org Mode Transient Menu"
-  [["GTD"
+  [["Commands"
+    ("l󠇘" "Link" nc/org-link-transient)]
+   ["GTD"
     ("s"  "Start Daily Review" nc/org-insert-daily-review)
     ("d"  "Insert Daily Heading" nc/insert-daily-heading)
     ]
@@ -3408,6 +3410,11 @@ I try to do a lot of things with =org-roam= :
    ["Search"
     ("?"  "Search Notes" nc/search-notes)]])
 
+ (transient-define-prefix nc/org-link-transient()
+   [("i" "insert" org-insert-link)
+    ("s" "store" org-store-link)
+    ]
+    )
 (define-key org-mode-map (kbd "C-q C-q") 'nc/transient-org)
 #+end_src
 
