--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -928,7 +928,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
     ("n" "Notes" nc/goto-notes-dir)
     ("p" "Projects" nc/goto-projects-dir)
     ("h" "Home" (lambda () (interactive) (dired "~")))
-    ("C-f" "Dirs..." nc/directory-menu)]
+    ("C-d" "Dirs..." nc/directory-menu)]
    ["Other"
     ("c" "Goto Clock" org-clock-goto)
     ("C-o" "Find file at point" ffap)
