--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1039,6 +1039,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "m" #'mc/mark-all-words-like-this
   "s" #'nc/consult-rg-my-projects
   "t" #'nc/treemacs-toggle
+  "y" #'consult-yasnippet
   "C-b" #'nc/buffer-menu
   "C-i" prefix-buffer-map-ctrl-i
   "C-j" #'nc/jump-menu
