--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -163,15 +163,16 @@ Remove minor modes from mode line
 This happens a lot on OS X, where an Emacs instance started from the GUI inherits a default set of environment variables.
 
 #+begin_src emacs-lisp
-  (use-package exec-path-from-shell
-    :config
-    (when (memq window-system '(mac ns x))
-      (progn
-        (exec-path-from-shell-initialize)
-        ;; (exec-path-from-shell-copy-env "GOPATH")
-        ;;(exec-path-from-shell-copy-env "JAVA_HOME")
-        (exec-path-from-shell-copy-env "XDG_CONFIG_HOME")
-        )))
+(use-package exec-path-from-shell
+  :defer 5
+  :config
+  (when (memq window-system '(mac ns x))
+    (progn
+      (exec-path-from-shell-initialize)
+      ;; (exec-path-from-shell-copy-env "GOPATH")
+      ;;(exec-path-from-shell-copy-env "JAVA_HOME")
+      (exec-path-from-shell-copy-env "XDG_CONFIG_HOME")
+      )))
 #+end_src
 
 ** No Littering
@@ -1475,16 +1476,17 @@ Expand region increases the selected region by semantic units. Just keep pressin
     - Case insensitivity – Include ‘-i’ in =ediff-diff-options=.
 
 #+begin_src emacs-lisp
-  (use-package ediff
-    :straight nil
-    :custom
-     ;; Ediff should be opened in selected frame and split window horizontally
-    (ediff-window-setup-function 'ediff-setup-windows-plain)
-    (ediff-split-window-function 'split-window-horizontally)
-    (ediff-diff-options "-w")
-    :config
-    ;; Pour éviter des ouvertures de frames intempestives
-    (advice-add 'ediff-window-display-p :override 'ignore))
+(use-package ediff
+  :straight nil
+  :defer t
+  :custom
+   ;; Ediff should be opened in selected frame and split window horizontally
+  (ediff-window-setup-function 'ediff-setup-windows-plain)
+  (ediff-split-window-function 'split-window-horizontally)
+  (ediff-diff-options "-w")
+  :config
+  ;; Pour éviter des ouvertures de frames intempestives
+  (advice-add 'ediff-window-display-p :override 'ignore))
 #+end_src
 
 
@@ -1570,6 +1572,7 @@ Use `treemacs' command for old functionality."
 #+begin_src emacs-lisp
 (use-package rainbow-mode
   :ensure t
+  :defer t
   :config
   (add-hook 'prog-mode-hook #'rainbow-mode)
   (diminish 'rainbow-mode))
@@ -1579,21 +1582,21 @@ Use `treemacs' command for old functionality."
 Snippets for programming.
 
  #+begin_src emacs-lisp
-   (use-package yasnippet
-     :ensure t
-     :diminish yas-minor-mode
-     :config
-     (use-package yasnippet-snippets)
-     :hook
-     (after-init . yas-global-mode))
+ (use-package yasnippet
+   :ensure t
+   :diminish yas-minor-mode
+   :config
+   (use-package yasnippet-snippets)
+   :hook
+   (after-init . yas-global-mode))
  #+end_src
 
 Consult integration
 #+begin_src emacs-lisp
-  (use-package consult-yasnippet
-    :bind
-    (:map global-map
-     ("C-c y" . consult-yasnippet)))
+(use-package consult-yasnippet
+  :bind
+  (:map global-map
+   ("C-c y" . consult-yasnippet)))
 #+end_src
 
 
@@ -2120,6 +2123,7 @@ Cf https://github.com/minad/tempel
 ;; Configure Tempel
 (use-package tempel
   ;; Require trigger prefix before template name when completing.
+  :defer t
   :custom
   (tempel-trigger-prefix "<")
 
@@ -3221,14 +3225,16 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
 [[https://github.com/Kungsgeten/yankpad][Yankpad]] paste snippets from an org-mode file.
 
 #+begin_src emacs-lisp
-    (use-package yankpad    
-      :init
-      (setq yankpad-file (concat org-directory "/templates/yankpad.org"))
-      :config
-      ;; If you want to complete snippets using company-mode
-      ;; (add-to-list 'company-backends 'company-yankpad)
-      ;; If you want to expand snippets with hippie-expand
-      (add-to-list 'hippie-expand-try-functions-list #'yankpad-expand))
+(use-package yankpad
+  :defer t
+  :init
+  (setq yankpad-file (concat org-directory "/templates/yankpad.org"))
+  :commands (yankpad-insert yankpad-edit yankpad-map)
+  :config
+  ;; If you want to complete snippets using company-mode
+  ;; (add-to-list 'company-backends 'company-yankpad)
+  ;; If you want to expand snippets with hippie-expand
+  (add-to-list 'hippie-expand-try-functions-list #'yankpad-expand))
 #+end_src
 ** Org Roam
 
@@ -3579,10 +3585,9 @@ Better defaults
 
    ))
 
-
-
 ;; optionally
 (use-package lsp-ui
+  :defer t
   :hook lsp-mode
   :init
   ;; (setq lsp-ui-doc-alignment 'frame
@@ -3600,11 +3605,13 @@ Better defaults
                ([remap xref-find-references] . lsp-ui-peek-find-references))))
 
 (use-package lsp-treemacs
+  :defer t
   :commands lsp-treemacs-errors-list)
 
 
 ;; Integration with consult
-(use-package consult-lsp)
+(use-package consult-lsp
+  :defer t)
 
 (with-eval-after-load 'lsp-mode
   ;; Remap `lsp-treemacs-errors-list' (bound to C-c l g e).
@@ -3837,6 +3844,7 @@ Hydra
 
 #+begin_src emacs-lisp
 (use-package combobulate
+    :defer t
     :custom
     ;; You can customize Combobulate's key prefix here.
     ;; Note that you may have to restart Emacs for this to take effect!
@@ -3943,12 +3951,14 @@ My custom rebinding =C-c C-p= to =cider-pprint-eval-last-sexp-to-comment=
 #+end_src
 ** Go
 #+begin_src emacs-lisp
-  (use-package go-mode)
+  (use-package go-mode
+    :defer t)
 #+end_src
 ** Just
 Mode for justfiles used by [[https://github.com/casey/just][Just]] 
 #+begin_src emacs-lisp
-  (use-package just-mode)
+  (use-package just-mode
+    :defer t)
 #+end_src
 ** Lua
 #+begin_src emacs-lisp
@@ -3967,6 +3977,9 @@ GitHub Flavored Markdown by default for README.md files.
   :mode (("README\\.md\\'" . gfm-mode)
          ("\\.md\\'"       . markdown-mode)
          ("\\.markdown\\'" . markdown-mode))
+  :bind
+  (:map markdown-mode-map
+        ("C-; C-;" . nc/transient-markdown-menu))
   :config
   (setq markdown-live-preview-delete-export 'delete-on-destroy)
   (setq markdown-fontify-code-blocks-natively t)
@@ -4038,9 +4051,6 @@ GitHub Flavored Markdown by default for README.md files.
   [
    ["Actions"
     ("p" "PlantUML preview" nc/plantuml-preview-current-block)]])
-
-(define-key markdown-mode-map (kbd "C-; C-;") 'nc/transient-markdown-menu)
-
 #+end_src
 
 
@@ -4068,7 +4078,8 @@ Needs Java and plantuml.jar installed in =~/opt=
   :mode "\\.puml\\'"
   :bind
   (:map plantuml-mode-map
-        ("C-c C-p" . nc/plantuml-generate-png))
+        ("C-c C-p" . nc/plantuml-generate-png)
+        ("C-; C-;" . nc/transient-plantuml-menu))
   :config
   (setq plantuml-output-type "png")
   (defun nc/plantuml-generate-png ()
@@ -4126,9 +4137,6 @@ Needs Java and plantuml.jar installed in =~/opt=
   [
    ["Actions"
     ("p" "Preview" nc/plantuml-preview-current-block)]])
-
-(define-key plantuml-mode-map (kbd "C-; C-;") 'nc/transient-plantuml-menu)
-
 #+end_src
 
 ** Python
@@ -4174,6 +4182,7 @@ Needs Java and plantuml.jar installed in =~/opt=
 :warning: LSP pyright needs NPM
 #+begin_src emacs-lisp
 (use-package lsp-pyright
+  :defer t
   :init
   ;; Prevent `lsp-pyright' start in multi-root mode.
   ;; This must be set before the package is loaded.
@@ -4209,6 +4218,7 @@ Needs Java and plantuml.jar installed in =~/opt=
 #+begin_src emacs-lisp
 (use-package virtualenvwrapper
   :ensure t
+  :defer t
   :init
   (venv-initialize-eshell))
 #+end_src
@@ -4216,9 +4226,10 @@ Needs Java and plantuml.jar installed in =~/opt=
 ***² Pyvenv
 
 #+begin_src emacs-lisp
-  (use-package pyvenv
-    :config
-    (pyvenv-mode))
+(use-package pyvenv
+  :defer t
+  :config
+  (pyvenv-mode))
 #+end_src
 
 *** Format buffer with Ruff
@@ -4297,8 +4308,9 @@ Needs Terraform LSP Server, not the latest version, works fine with =0.28.1=
 #+end_src
 
 #+begin_src emacs-lisp
-  (use-package terraform-mode
-    :hook ((terraform-mode . lsp)))
+(use-package terraform-mode
+  :defer t
+  :hook ((terraform-mode . lsp)))
 #+end_src
 
 ** Rest Client
@@ -4308,14 +4320,15 @@ Verb is a package for Emacs which allows you to organize and send HTTP requests
 ℹ️ To replace =restlient= wich is no longer maintained
 
 #+begin_src emacs-lisp
-  (use-package verb
-    :config
-    (setq verb-auto-kill-response-buffers nil) ; Response buffers killed before sending a request.
+(use-package verb
+  :defer t
+  :config
+  (setq verb-auto-kill-response-buffers nil) ; Response buffers killed before sending a request.
 
-    )
+  )
 
-  (with-eval-after-load 'org
-    (define-key org-mode-map (kbd "C-c C-r") verb-command-map))
+(with-eval-after-load 'org
+  (define-key org-mode-map (kbd "C-c C-r") verb-command-map))
 
 #+end_src
 
@@ -4326,18 +4339,19 @@ Verb is a package for Emacs which allows you to organize and send HTTP requests
 [[https://web-mode.org/][Web Mode]] major mode for editing HTML pages
 
 #+begin_src emacs-lisp
-  (use-package web-mode
-    :mode (("\\.html\\'" . web-mode)
-           ("\\.hbs\\'" . web-mode)
-           ("\\.tag$" . web-mode)
-           ("\\.ftl$" . web-mode)
-           ("\\.jsp$" . web-mode)
-           ("\\.vue$" . web-mode)
-           ("\\.php$" . web-mode))
-    :config
-    (add-hook 'web-mode-hook (lambda ()
-                               (setq web-mode-markup-indent-offset 4)
-                               (setq web-mode-code-indent-offset 4))))
+(use-package web-mode
+  :defer t
+  :mode (("\\.html\\'" . web-mode)
+         ("\\.hbs\\'" . web-mode)
+         ("\\.tag$" . web-mode)
+         ("\\.ftl$" . web-mode)
+         ("\\.jsp$" . web-mode)
+         ("\\.vue$" . web-mode)
+         ("\\.php$" . web-mode))
+  :config
+  (add-hook 'web-mode-hook (lambda ()
+                             (setq web-mode-markup-indent-offset 4)
+                             (setq web-mode-code-indent-offset 4))))
 
 #+end_src
 
@@ -4535,6 +4549,7 @@ Adapted from https://config.daviwil.com/emacs#eshell
         eshell-prefer-lisp-functions nil))
 
 (use-package eshell
+  :defer t
   :after esh-mode
   :hook (eshell-first-time-mode . nc/eshell-configure)
 
