--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -676,7 +676,7 @@ your currently entered incomplete command (a prefix) in a popup.
 :ID:       597a0c88-991d-48a9-bf3f-48a942a070c8
 :END:
 
-🚧 Experimental : inspired by https://summeremacs.github.io/posts/universal-keybind/ 
+Inspired by https://summeremacs.github.io/posts/universal-keybind/ 
 
 See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
@@ -788,8 +788,6 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
     ("p" "Search in Projects" nc/consult-rg-my-projects)
     ("." "symbol" nc/consult-line-symbol-at-point)]])
 
-
-
 (transient-define-prefix nc/window-menu ()
   "Simple frame, window and buffer management."
   ["Frame, Window & Buffer Manager"
@@ -845,8 +843,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "P" #'nc/goto-projects-dir
   "y" #'nc/yank-buffer-path
   "C-;" #'nc/file-menu
-  "C-f" #'nc/consult-fd-my-projects
-  )
+  "M-f" #'nc/consult-fd-my-projects)
 
 (defvar-keymap nc-insert-map
   :doc "My custom insert map"
@@ -864,8 +861,15 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 (defvar-keymap nc-kill-map
   :doc "My custom kill map"
   "f" #'delete-frame
-  "K" #'kill-buffer-and-window
-)
+  "K" #'kill-buffer-and-window)
+
+(defvar-keymap nc-menu-map
+  :doc "My custom menu map"
+  "f" #'nc/file-menu
+  "s" #'nc/search-menu
+  "t" #'nc/toggle-menu
+  "w" #'nc/window-menu)
+
 
 (defvar-keymap nc-notes-map
   :doc "My custom notes map"
@@ -889,13 +893,6 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "v" #'nc/vc-browse-remote-current-line
   "R" #'nc/vc-browse-remote)
 
-(defvar-keymap nc-search-map
-  :doc "My custom search map"
-  ;; Search
-  "." #'nc/consult-line-symbol-at-point
-  "C-s" #'nc/consult-rg-my-projects
-  "s" #'nc/search-menu)
-
 (defvar-keymap nc-window-map
   :doc "My custom window map"
 
@@ -903,7 +900,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "b" #'display-buffer
   "k" #'kill-buffer-and-window
   "o" #'other-frame
-  "C-;" #'nc/window-menu
+  "C-m" #'nc/window-menu
   "M-n" #'windmove-display-new-frame
   "C-d" #'windmove-delete-down
   "C-u" #'windmove-delete-up
@@ -913,23 +910,28 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 (defvar-keymap nc-prefix-map
   :doc "My global prefix keymap"
 
-  "C-." #'nc/consult-line-symbol-at-point
-  "C-:" #'avy-goto-char-timer
+  ";" #'nc/goto-emacs-config
+  ":" #'avy-goto-char-timer
+  
   "C-c" nc-code-map
+  "c" nc-code-map
   "C-f" nc-file-map
+  "f" nc-file-map
   "C-i" nc-insert-map
   "C-j" #'crux-top-join-line
   "C-k" nc-kill-map
   "C-l" #'nc/open-bookmark
-  "C-m" #'consult-mark
+  "C-;" nc-menu-map
   "C-n" nc-notes-map
   "C-o" nc-open-map
   "C-p" #'projectile-command-map
-  "C-s" nc-search-map
+  "C-s" #'nc/consult-line-symbol-at-point
   "C-v" #'nc/vc-browse-remote-current-line
-  "C-t" #'nc/toggle-menu
   "C-w" nc-window-map
-  "C-y" #'consult-yasnippet)
+  "C-y" #'consult-yasnippet
+
+  "M-s" #'nc/consult-rg-my-projects
+  "M-f" #'nc/consult-fd-my-projects)
 
 
 (which-key-add-keymap-based-replacements nc-prefix-map
@@ -939,10 +941,10 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "C-k" `("Kill"  . ,nc-kill-map)
   "C-n" `("Notes"  . ,nc-notes-map)
   "C-o" `("Open"  . ,nc-open-map)
-  "C-s" `("Search"  . ,nc-search-map)
   "C-w" `("Windows"  . ,nc-window-map)
   )
-(keymap-set global-map "C-;" nc-prefix-map)
+;; (keymap-set global-map "C-;" nc-prefix-map)
+(keymap-set global-map "C-c C-;" nc-prefix-map)
 #+end_src
 
 *** Transient Toggle Menu
