--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -729,6 +729,16 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
         (call-interactively #'nc/yank-buffer-path))))
    ]])
 
+(defun nc/goto-ssh-config-file ()
+  "Goto my ssh config files"
+  (interactive)
+  (find-file "~/.ssh/config"))
+
+(defun nc/goto-authinfo-file ()
+  "Goto my auth info file"
+  (interactive)
+  (find-file "~/.authinfo.gpg"))
+
 
 (transient-define-prefix nc/file-menu ()
   "File"
@@ -738,21 +748,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
    ("d" "Delete file & buffer" crux-delete-file-and-buffer)
    ("c" "Copy file" crux-copy-file-preserve-attributes)
    ("y" "Yank buffer path..." nc/yank-path-submenu)]
-  
-  ["Config & Credentials"
-    ("e" "Emacs Config" nc/goto-emacs-config)
-    ("p" "Credentials" nc/goto-my-credentials)
-    ("s" "SSH config"          (lambda () (interactive) (find-file "~/.ssh/config")))
-    ("t" "Authinfo"            (lambda () (interactive) (find-file "~/.authinfo.gpg")))
-  ]
-  ["Browse Files"
-    ("A" "Archives" nc/goto-archives-dir)
-    ("F" "Find Files in Project Dir" nc/consult-fd-my-projects)
-    ("H" "Home" (lambda () (interactive) (dired "~")))
-    ("N" "Notes" nc/goto-notes-dir)
-    ("T" "Templates" nc/goto-templates-dir)
-    ("P" "Projects" nc/goto-projects-dir)
-    ]])
+  ])
 
 (transient-define-prefix nc/buffer-menu ()
   "Control buffer operations."
@@ -778,8 +774,33 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
    ("q" "Quit" transient-quit-one)])
 
 
+(transient-define-prefix nc/goto-menu ()
+  "Goto Transient Menu"
+  
+  [["Config File & Credentials"
+    (";" "Emacs Config" nc/goto-emacs-config)
+    ("p" "Credentials" nc/goto-my-credentials)
+    ("s" "SSH config"  nc/goto-ssh-config-file)
+    ("a" "Authinfo"  nc/goto-authinfo-file)
+  ]
+  ["Dirs"
+    ("A" "Archives" nc/goto-archives-dir)
+    ("H" "Home" (lambda () (interactive) (dired "~")))
+    ("N" "Notes" nc/goto-notes-dir)
+    ("T" "Templates" nc/goto-templates-dir)
+    ("P" "Projects" nc/goto-projects-dir)
+    ]])
+
+(transient-define-prefix nc/project-menu ()
+  "Transient Search Menu"
+  ["Projects"
+   ("p" "Projectile" projectile-commander)
+   ("s" "Search in my Projects" nc/consult-rg-my-projects)
+   ("f" "Find in my projects" nc/consult-fd-my-projects)])
+
+
 (transient-define-prefix nc/search-menu ()
-  "Jump"
+  "Transient Search Menu"
   ["Search"
    ["Org Files"
     ("h" "Heading" consult-org-agenda)
@@ -834,16 +855,26 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   :doc "My custom file keymap"
   ;; File Commands
   "." #'ffap
-  ";" #'nc/goto-emacs-config
   "," #'projectile-edit-dir-locals
   "c" #'crux-copy-file-preserve-attributes
   "d" #'crux-delete-file-and-buffer
-  "m" #'ffap-menu
+  "C-f" #'ffap-menu
   "r" #'rename-visited-file
-  "P" #'nc/goto-projects-dir
   "y" #'nc/yank-buffer-path
   "C-;" #'nc/file-menu
   "M-f" #'nc/consult-fd-my-projects)
+
+(defvar-keymap nc-goto-map
+  :doc "My custom goto keymap"
+  ";" #'nc/goto-emacs-config
+  "a" #'nc/goto-authinfo-file
+  "p" #'nc/goto-my-credentials
+  "s" #'nc/goto-ssh-config-file
+  "A" #'nc/goto-archives-dir
+  "P" #'nc/goto-projects-dir
+  "N" #'nc/goto-notes-dir
+  "T" #'nc/goto-templates-dir)
+
 
 (defvar-keymap nc-insert-map
   :doc "My custom insert map"
@@ -863,14 +894,6 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "f" #'delete-frame
   "K" #'kill-buffer-and-window)
 
-(defvar-keymap nc-menu-map
-  :doc "My custom menu map"
-  "f" #'nc/file-menu
-  "s" #'nc/search-menu
-  "t" #'nc/toggle-menu
-  "w" #'nc/window-menu)
-
-
 (defvar-keymap nc-notes-map
   :doc "My custom notes map"
   ;; Notes
@@ -889,7 +912,6 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "e" #'crux-open-with
   "f" #'make-frame
   "l" #'nc/open-bookmark
-  "p" #'consult-projectile
   "v" #'nc/vc-browse-remote-current-line
   "R" #'nc/vc-browse-remote)
 
@@ -913,37 +935,43 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   ";" #'nc/goto-emacs-config
   ":" #'avy-goto-char-timer
   
-  "C-c" nc-code-map
   "c" nc-code-map
-  "C-f" nc-file-map
   "f" nc-file-map
-  "C-i" nc-insert-map
+  "g" nc-goto-map
+  "i" nc-insert-map
+  "k" nc-kill-map
+  
+  "n" nc-notes-map
+  "o" nc-open-map
+  "p" #'projectile-command-map
+  "w" nc-window-map
+  
   "C-j" #'crux-top-join-line
-  "C-k" nc-kill-map
   "C-l" #'nc/open-bookmark
-  "C-;" nc-menu-map
-  "C-n" nc-notes-map
-  "C-o" nc-open-map
-  "C-p" #'projectile-command-map
+  "C-p" #'consult-projectile
   "C-s" #'nc/consult-line-symbol-at-point
   "C-v" #'nc/vc-browse-remote-current-line
-  "C-w" nc-window-map
-  "C-y" #'consult-yasnippet
 
-  "M-s" #'nc/consult-rg-my-projects
-  "M-f" #'nc/consult-fd-my-projects)
+  "M-b" #'nc/buffer-menu
+  "M-f" #'nc/file-menu
+  "M-g" #'nc/goto-menu
+  "M-p" #'nc/project-menu
+  "M-s" #'nc/search-menu
+  "M-t" #'nc/toggle-menu
+  "M-w" #'nc/window-menu)
 
 
 (which-key-add-keymap-based-replacements nc-prefix-map
-  "C-c" `("LSP / Coding"  . ,nc-code-map)
-  "C-f" `("File"  . ,nc-file-map)
-  "C-i" `("Insert"  . ,nc-insert-map)
-  "C-k" `("Kill"  . ,nc-kill-map)
-  "C-n" `("Notes"  . ,nc-notes-map)
-  "C-o" `("Open"  . ,nc-open-map)
-  "C-w" `("Windows"  . ,nc-window-map)
+  "c" `("Code"  . ,nc-code-map)
+  "f" `("File"  . ,nc-file-map)
+  "g" `("Goto"  . ,nc-goto-map)
+  "i" `("Insert"  . ,nc-insert-map)
+  "k" `("Kill"  . ,nc-kill-map)
+  "n" `("Notes"  . ,nc-notes-map)
+  "o" `("Open"  . ,nc-open-map)
+  "w" `("Windows"  . ,nc-window-map)
   )
-;; (keymap-set global-map "C-;" nc-prefix-map)
+(keymap-set global-map "C-;" nc-prefix-map)
 (keymap-set global-map "C-c C-;" nc-prefix-map)
 #+end_src
 
@@ -1138,6 +1166,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
     (if (fboundp 'display-line-numbers-mode)
         (display-line-numbers-mode 'toggle)
       (linum-mode 'toggle)))
+
 #+end_src
 
 * Windows
