--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2571,8 +2571,7 @@ will appear as projects.
           :empty-lines 1)
          ("s" "Someday" entry (file+headline nc/inbox-file "Inbox")
           "* SOMEDAY %? :idea:\n%u" :clock-in t :clock-resume t)
-         ("f" "FishLog" plain (file+olp+datetree nc/fishing-file)
-          "%[~/notes/templates/fishlog.org]" :time-prompt t)
+         
          ("F" "Film" entry (file+headline nc/watching-file "Films")
           "* NEXT %^{Titre}
         %i
@@ -2626,6 +2625,35 @@ will appear as projects.
                   `("l" "Linkk" entry (function org-journal-find-bookmark)
                          "* %?\n  %i\n  From: %a" :empty-lines 1))
  #+end_src
+*** Fishing Log
+
+#+begin_src emacs-lisp
+(add-to-list 'org-capture-templates
+      '("f" "Fishing Log Entry" entry
+        (file+headline nc/fishing-file "Sessions")
+        "* %^t - %^{Location| Vilaine| Etangs Bruz| Doubs}
+:PROPERTIES:
+:Date: %^t %\\1
+:Horaire: %^{Horaire}
+:Location: %\\2
+:Type: %^{Type|🚶 Du bord|🛟 Float tube|⛵ Bateau}
+:Météo: %^{Weather|☀️ Sunny|⛅ Partly Cloudy|☁️ Cloudy|🌧️ Rainy|⛈️ Stormy|🌫️ Foggy}
+:Temp: %^{Temperature (°C)}
+:Vent: %^{Wind conditions}
+:Prise: %^{Prises}
+:Rating: %^{Rating| 🔴| ⭐| ⭐⭐| ⭐⭐⭐}
+:END:
+
+Notes
+- Techniques leurres: 
+- What worked: 
+- What didn't work: 
+- Next time: 
+
+"
+        :empty-lines 1))
+#+end_src
+
 *** Note
 #+begin_src emacs-lisp
   (add-to-list 'org-capture-templates
@@ -2646,7 +2674,7 @@ will appear as projects.
 :DATE_ADDED: %u
 :END:
 
-%?"
+'%?"
                :empty-lines 1))
 #+end_src
 *** Interruption task
