--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2267,7 +2267,7 @@ Org mode configuration automatically tangled in =./lisp/setup-org.el=
 (use-package org-bullets
   :hook (org-mode . org-bullets-mode)
   :after org
-  :custom (org-bullets-bullet-list '("◉" "✿" "★" "•")))
+  :custom (org-bullets-bullet-list '("◉" "✿" "★" "•" "•" "•" "•" "•")))
 
 ;; Hiding leading bullets in headers
 (setq org-hide-leading-stars t)
@@ -2276,44 +2276,44 @@ Org mode configuration automatically tangled in =./lisp/setup-org.el=
 *** Org Heading Styles
 
 #+begin_src emacs-lisp
-  (let* ((variable-tuple (cond ((x-list-fonts "Jetbrains Mono") '(:font "Jetbrains Mono"))
-                               ((x-list-fonts "Monaco") '(:font "Monaco"))
-                               ((x-list-fonts "Input Sans") '(:font "Input Sans"))
-                               ((x-list-fonts "Lucida Grande")   '(:font "Lucida Grande"))
-                               ((x-list-fonts "Verdana")         '(:font "Verdana"))
-                               ((x-family-fonts "Sans Serif")    '(:family "Sans Serif"))
-                               (nil (warn "Cannot find a Sans Serif Font.  Install Open Sans."))))
-         (base-font-color     (face-foreground 'default nil 'default))
-         (headline           `(:inherit default :weight normal :foreground ,base-font-color)))
+(let* ((variable-tuple (cond ((x-list-fonts "Jetbrains Mono") '(:font "Jetbrains Mono"))
+                             ((x-list-fonts "Monaco") '(:font "Monaco"))
+                             ((x-list-fonts "Input Sans") '(:font "Input Sans"))
+                             ((x-list-fonts "Lucida Grande")   '(:font "Lucida Grande"))
+                             ((x-list-fonts "Verdana")         '(:font "Verdana"))
+                             ((x-family-fonts "Sans Serif")    '(:family "Sans Serif"))
+                             (nil (warn "Cannot find a Sans Serif Font.  Install Open Sans."))))
+       (base-font-color     (face-foreground 'default nil 'default))
+       (headline           `(:inherit default :weight normal :foreground ,base-font-color)))
 
-    (custom-theme-set-faces 'user
-                            '(org-special-keyword  ((t (:inherit (font-lock-comment-face fixed-pitch)) :foreground "#69ffeb")))
+  (custom-theme-set-faces 'user
+                          '(org-special-keyword  ((t (:inherit (font-lock-comment-face fixed-pitch)) :foreground "#69ffeb")))
 
-                            `(org-level-8 ((t (,@headline ,@variable-tuple))))
-                            `(org-level-7 ((t (,@headline ,@variable-tuple))))
-                            `(org-level-6 ((t (,@headline ,@variable-tuple))))
-                            `(org-level-5 ((t (,@headline ,@variable-tuple))))
-                            `(org-level-4 ((t (,@headline ,@variable-tuple :height 1.1))))
-                            `(org-level-3 ((t (,@headline ,@variable-tuple :height 1.2 :foreground "#ff8a69"))))
-                            `(org-level-2 ((t (,@headline ,@variable-tuple :height 1.3 :foreground "#ffd569"))))
-                            `(org-level-1 ((t (,@headline ,@variable-tuple :height 1.4 :foreground "#ffaf69"))))
-                            `(org-document-title ((t (,@headline ,@variable-tuple :height 1.6 :underline nil :foreground "#e6b68d"))))
-                            `(org-document-info         ((t (:foreground "#697dff"))))
-                            `(org-document-info-keyword         ((t (:foreground "#697dff"))))
-                            `(header-line ((t (:background "#697dff" :height 220))))
-                            '(org-special-keyword-face ((t (:foreground "#697dff"))))
+                          `(org-level-8 ((t (,@headline ,@variable-tuple :height 1.1))))
+                          `(org-level-7 ((t (,@headline ,@variable-tuple :height 1.1))))
+                          `(org-level-6 ((t (,@headline ,@variable-tuple :height 1.1))))
+                          `(org-level-5 ((t (,@headline ,@variable-tuple :height 1.1))))
+                          `(org-level-4 ((t (,@headline ,@variable-tuple :height 1.1 :foreground "#ff8a69"))))
+                          `(org-level-3 ((t (,@headline ,@variable-tuple :height 1.2 :foreground "#ff8a69"))))
+                          `(org-level-2 ((t (,@headline ,@variable-tuple :height 1.3 :foreground "#ffd569"))))
+                          `(org-level-1 ((t (,@headline ,@variable-tuple :height 1.35 :foreground "#ffaf69"))))
+                          `(org-document-title ((t (,@headline ,@variable-tuple :height 1.6 :underline nil :foreground "#e6b68d"))))
+                          `(org-document-info         ((t (:foreground "#697dff"))))
+                          `(org-document-info-keyword         ((t (:foreground "#697dff"))))
+                          `(header-line ((t (:background "#697dff" :height 220))))
+                          '(org-special-keyword-face ((t (:foreground "#697dff"))))
 
-                            '(org-block-begin-line ((t (:foreground "#69ffeb"))))
-                            '(org-verbatim ((t (:foreground "#69ffeb"))))
-                            '(org-table ((t (:foreground "#fae196"))))
-                            `(org-checkbox ((t (:foreground "#ff4c4f"
-                                           :box (:line-width 1 :style released-button)))))
-                            `(org-date ((t (:foreground "#69ffeb"))))
-                            `(org-tag ((t (:foreground "#e6b68d"))))
+                          '(org-block-begin-line ((t (:foreground "#69ffeb"))))
+                          '(org-verbatim ((t (:foreground "#69ffeb"))))
+                          '(org-table ((t (:foreground "#fae196"))))
+                          `(org-checkbox ((t (:foreground "#ff4c4f"
+                                         :box (:line-width 1 :style released-button)))))
+                          `(org-date ((t (:foreground "#69ffeb"))))
+                          `(org-tag ((t (:foreground "#e6b68d"))))
 
-                            `(org-checkbox-statistics-todo ((t (:foreground "#ff4c4f"))))
-                            '(org-list-dt               ((t (:foreground "#ff4c4f"))))
-                            '(org-link                  ((t (:foreground "#697dff" :underline t))))))
+                          `(org-checkbox-statistics-todo ((t (:foreground "#ff4c4f"))))
+                          '(org-list-dt               ((t (:foreground "#ff4c4f"))))
+                          '(org-link                  ((t (:foreground "#697dff" :underline t))))))
 #+end_src
 
 
