Fix LSP Treemacs KeyBindings

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -848,9 +848,9 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "r" #'lsp-rename
   "o" #'lsp-organize-imports
   "X" #'lsp-treemacs-errors-list
-  "H" #'lsp-treemacs-call-hierarchy
+  ":" #'lsp-treemacs-call-hierarchy
   "S" #'lsp-treemacs-symbols
-  "R" #'lsp-treemacs-references)
+  "?" #'lsp-treemacs-references)
 
 (defvar-keymap nc-file-map
   :doc "My custom file keymap"
@@ -3683,7 +3683,13 @@ Better defaults
 
 (use-package lsp-treemacs
   :defer t
-  :commands lsp-treemacs-errors-list)
+  :commands lsp-treemacs-errors-list
+  :bind (:map lsp-mode-map
+              ("C-c ?" . lsp-treemacs-references)
+              ("C-c :" . lsp-treemacs-call-hierarchy))
+  :config
+  
+  (setq lsp-treemacs-sync-mode 1))
 
 
 ;; Integration with consult
